WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113963
[BlackBerry] Blitting wrong rect during history navigations
https://bugs.webkit.org/show_bug.cgi?id=113963
Summary
[BlackBerry] Blitting wrong rect during history navigations
Jacky Jiang
Reported
2013-04-04 14:45:14 PDT
On www.bbc.com/news, we blit at the wrong rect when navigating back from a story page to the main page.
Attachments
Patch
(2.76 KB, patch)
2013-04-04 15:50 PDT
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-04-04 15:50:23 PDT
Created
attachment 196545
[details]
Patch
Rob Buis
Comment 2
2013-04-05 08:06:30 PDT
Comment on
attachment 196545
[details]
Patch Ok.
Jacky Jiang
Comment 3
2013-04-05 10:34:51 PDT
Committed
r147747
: <
http://trac.webkit.org/changeset/147747
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug