[BlackBerry] Blitting wrong rect during history navigations https://bugs.webkit.org/show_bug.cgi?id=113963

Patch by Jacky Jiang <zhajiang@rim.com>.
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

On www.bbc.com/news, we blit wrong rect during the second restoration
of the view states when we navigate back from stories to the main page.
Update the contents size and scroll position before we render and blit
if we failed to zoomAboutPoint so that UI thread can still get the
correct rect during blit.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::restoreHistoryViewState):

Canonical link: https://commits.webkit.org/132390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147747 268f45cc-cd09-0410-ab3c-d52691b4dbfc